argocd-install/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.chowned.net`)
      priority: 10
      middlewares:
      - name: chowned@file
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.chowned.net`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-cert
